# mcp-seo

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
mcp_seo/: __init__.py  __main__.py  browser.py  cli.py  config.py  crawler.py  fetcher.py  mcp_server.py  report.py  utils.py
mcp_seo/analyzers/: __init__.py  accessibility.py  content.py  headers.py  headings.py  images.py  lighthouse.py  links.py  meta.py  mobile.py  performance.py  robots.py  sitemap.py  structured_data.py  url_structure.py
skills/mcp-seo/: SKILL.md
skills/mcp-seo/evals/: evals.json
skills/mcp-seo/references/: seo-audit-methodology.md  tool-catalog.md
tests/: __init__.py  conftest.py  test_accessibility.py  test_content.py  test_crawler.py  test_headers.py  test_headings.py  test_images.py  test_lighthouse.py  test_links.py  test_meta.py  test_robots.py  test_sitemap.py  test_structured_data.py  test_url_structure.py  test_utils.py
