[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-seo"
version = "0.1.0"
description = "Open-source SEO analysis toolkit for LLM agents — CLI + MCP server."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Giacomo Battaglia", email = "battaglia.giacomo@yahoo.it" },
]
keywords = ["seo", "mcp", "llm", "web-analysis", "lighthouse", "crawler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "lxml>=5.0.0",
    "pydantic>=2.0.0",
    "mcp[cli]>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/g-battaglia/mcp-seo"
Repository = "https://github.com/g-battaglia/mcp-seo"
Issues = "https://github.com/g-battaglia/mcp-seo/issues"

[project.scripts]
mcp-seo = "mcp_seo.cli:main"

[dependency-groups]
dev = [
    "poethepoet>=0.25.0",
]
